Create the basic html interface create a function that console log the result when clicked

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Rock-Paper-Scissors Game</title>
 </head>
 <body>
+    <div class="container">
+        <div class="buttonContainer">
+            <button class="selectionButton" id="rockSelection">ROCK</button>
+            <button class="selectionButton" id="paperSelection">PAPER</button>
+            <button class="selectionButton" id="scissorsSelection">SCISSORS</button>
+        </div>
+        <div class="scoreContainer">
+            <p class="userName">USER</p>
+            <p class="computerName">COMPUTER</p>
+            <p class="userScore"></p>
+            <p class="computerScore"></p>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
