scoreCounter now shows in html the score Changed the userScore & computerScore of HTML to 0 to show it from the beginning

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="scoreContainer">
             <p class="userName">USER</p>
             <p class="computerName">COMPUTER</p>
-            <p class="userScore"></p>
-            <p class="computerScore"></p>
+            <p class="userScore">0</p>
+            <p class="computerScore">0</p>
         </div>
     </div>
     <script src="script.js"></script>
