Changed playAgain() so now it mantains the structure and change one button for another. I use replaceChild

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <h1 class="mainTitle">ROCK - PAPER - SCISSORS
+        </h1>
+        <h2 class="secondTitle">The final Battle</h2>
         <div class="buttonContainer">
             <button class="selectionButton" id="rockSelection">ROCK</button>
             <button class="selectionButton" id="paperSelection">PAPER</button>
