Added design to the html and style.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -16,11 +17,16 @@
             <button class="selectionButton" id="paperSelection">PAPER</button>
             <button class="selectionButton" id="scissorsSelection">SCISSORS</button>
         </div>
+        <div class="resultTextContainer"></div>
         <div class="scoreContainer">
-            <p class="userName">USER</p>
-            <p class="computerName">COMPUTER</p>
-            <p class="userScore">0</p>
-            <p class="computerScore">0</p>
+            <div class="userScoreContainer">
+                <p class="userName">USER</p>
+                <p class="userScore">0</p>
+            </div>
+            <div class="computerScoreContainer">
+                <p class="computerName">COMPUTER</p>
+                <p class="computerScore">0</p>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
