Modify scoreCounter and what happens when clicking on the buttons so it returns a text explaining the result

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 class="mainTitle">ROCK - PAPER - SCISSORS
         </h1>
-        <h2 class="secondTitle">The final Battle</h2>
+        <h2 class="secondTitle">Choose your weapon</h2>
         <div class="buttonContainer">
             <button class="selectionButton" id="rockSelection">ROCK</button>
             <button class="selectionButton" id="paperSelection">PAPER</button>
